--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: .
           push: true
-          # tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.GITHUB_REF }}
           # labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
