--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -40,7 +40,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.GITHUB_REF }}
+          tags: 
+            - ${{ env.GITHUB_REF_NAME }}
           # labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
