--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -40,8 +40,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: 
-            - ${{ env.GITHUB_REF_NAME }}
+          tags: ${{ github.GITHUB_REF_NAME }}
           # labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
