--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ github.GITHUB_REF_NAME }}
+          tags: type=ref,event=push
           # labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
