--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,21 @@
 {
-    "image": "ghcr.io/max-allan/debug:main"
+    "image": "ghcr.io/max-allan/debug:main",
+      "mounts": [
+    // create a new volume to hold the docker-in-docker images (i.e. the k8s container images)
+    //  so that they survive container restart
+    "source=var-lib-docker,target=/var/lib/docker,type=volume",
+    // create a new volume to hold the k8s credentials so that they survive container restart
+    "source=kube,target=/home/vscode/.kube,type=volume"
+  ],
+  // don't let VSCode override the CMD in our Dockerfile
+  "overrideCommand": false,
+  "runArgs": [
+    // needed to enable debugging C/C++/golang programs
+    "--cap-add=SYS_PTRACE",
+    "--security-opt",
+    "seccomp=unconfined",
+    // needed to enable docker-in-docker
+    "--privileged",
+    "--init"
+  ]
 }
